--- a/Checkers/Checkers.vcxproj
+++ b/Checkers/Checkers.vcxproj
@@ -167,6 +167,17 @@
     <ClCompile Include="Play.cpp" />
     <ClCompile Include="Sell.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Board.h" />
+    <ClInclude Include="Checkers.h" />
+    <ClInclude Include="CheckersActions.h" />
+    <ClInclude Include="Play.h" />
+    <ClInclude Include="Sell.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="FinishMenu.jpg" />
+    <Image Include="StartMenu.jpg" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
